istio/gateway.yaml
###########################################################################
# Ingress resource (gateway)
##########################################################################
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: public-gateway
  namespace: science
spec:
  selector:
    istio: ingressgateway # use istio default controller
    servers:
      - port:
          number: 80
          name: http
          protocol: HTTP
        hosts:
          - "*.example.com"
